--- a/nasa.html
+++ b/nasa.html
@@ -68,24 +68,26 @@
     <br>
     <div class = "row">
       <div class = "col-md-6">
-        <a href="store/database.jpg">
-          <img src="store/database.jpg" alt="Database connections" style ="width:80%">
+        <a href="nasa/ns3Inputs.png">
+          <img src="nasa/ns3Inputs.png" alt="Simulation Input Config" style ="width:80%">
           <center><div class="caption">
-            <p>The database design in MYSQL</p>
+            <p>The user can change these parameters to fit the desired scenario</p>
           </div></center>
         </a>
-      </div>
-      <div class = "col-md-5">
-        <a href="store/cart.jpg">
-          <img src="store/cart.jpg" alt="The checkout" style ="width:80%">
-          <div class="caption">
-            <center><p>The user's cart</p></center>
-          </div>
-        </a>
+        <br>
         <h2> Overview  </h2>
         <h4> This project was built using <a href="https://www.nsnam.org/">NS3</a>, a free open source network event simulator. The goal was to create a configurable
         simulation in which users can adjust inputs to calculate the resulting throughput, packet delivery, and other metrics. While working with peers, this was mainly a solo project.</h4>
           <br>
+      </div>
+      <div class = "col-md-5">
+        <a href="nasa/ns3Netanim.png">
+          <img src="nasa/ns3Netanim.png" alt="Netanim" style ="width:80%">
+          <div class="caption">
+            <center><p>The resulting simulation opened in NetAnim</p></center>
+          </div>
+        </a>
+
           <ul class="list-group">
             <center><li class="list-group-item active">The Simulation</li></center>
             <li class="list-group-item">Used LTE topology to connect MME, SGW, ENBs, UEs, PGW</li>
