--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
   <div class = "col-sm-5">
     <br><br>
     <h2> <b>About me</b> </h2>
-    <h4> Hi, I am a fourth year student at San Jose State University, and an aspiring computer engineer. I am 21, born and raised in San Jose.
+    <h4> Hi, I am a fifth year student at San Jose State University, and an aspiring computer engineer. I am 22, born and raised in San Jose.
        I'm a fan of motorsports, the outdoors, coffee, and sparkling water.</h4>
       <br><br>
       <h2> <b> Projects </b> </h2>
