fixed robotcar page

--- a/index.html
+++ b/index.html
@@ -91,6 +91,12 @@
                 <i class="fas fa-bicycle fa-8x"></i>
             </span>
         </div>
+        <div class = "col-sm-4">
+          <a href="robotCar.html">
+            <span style="color: black;">
+                <i class="fas fa-car-crash fa-8x"></i>
+            </span>
+        </div>
       </div>
     </div>
     <div class = "col-sm-5">
