--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
   <div class = "col-sm-5">
     <br><br>
     <h2> <b>About me</b> </h2>
-    <h4> Hi, I am a fifth year student at San Jose State University, and an aspiring computer engineer. I am 22, born and raised in San Jose.
+    <h4> Hi, im Kevin, a Computer Engineering graduate from San Jose State University. I am 23, born and raised in San Jose.
        I'm a fan of motorsports, the outdoors, coffee, and sparkling water.</h4>
       <br><br>
       <h2> <b> Projects </b> </h2>
@@ -86,9 +86,9 @@
             </span>
         </div>
         <div class = "col-sm-4">
-          <a href="bike.html">
+          <a href="RTOSmp3.html">
             <span style="color: black;">
-                <i class="fas fa-bicycle fa-8x"></i>
+                <i class="fas fa-mp3-player fa-8x"></i>
             </span>
         </div>
         <div class = "col-sm-4">
@@ -97,6 +97,7 @@
                 <i class="fas fa-car-crash fa-8x"></i>
             </span>
         </div>
+
       </div>
     </div>
     <div class = "col-sm-5">
