--- a/vroom.html
+++ b/vroom.html
@@ -29,6 +29,12 @@
     overflow-x: hidden;
   }
 </style>
+
+<style type="text/css">
+  <!--
+   .tab { margin-left: 40px; }
+  -->
+  </style>
 </head>
 
 <nav class="navbar navbar-inverse">
@@ -54,85 +60,24 @@
   <h2><b> Cars and Bikes </b></h2>
   <h4> I've been interested in cars for a while, and the last couple of years I have been getting my hands dirty.</h4>
 </center>
-
-
-<div class = tab id = content>
-  <div class = container-fluid>
-    <center><h2><b> The Stable</b></h2></center>
+<center>
+<h2>Current Stable</h2>
+  
+  <div class="row"> 
+    <div class="col-md-6">
       <br>
-      <div class = "row">
-        <div class = "col-md-6">
-          <div id="myCarousel" class="carousel slide" data-ride="carousel">
-            <ol class="carousel-indicators">
-              <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-              <li data-target="#myCarousel" data-slide-to="1"></li>
-              <li data-target="#myCarousel" data-slide-to="2"></li>
-              <li data-target="#myCarousel" data-slide-to="3"></li>
-            </ol>
-            <div class="carousel-inner">
-              <div class="item active">
-                <img src="vroom/subieOnIce.jpg" alt="2008 wrx">
-              </div>
-              <div class="item">
-                <img src="vroom/subieBoat.jpg" alt="2008 wrx with a boat">
-              </div>
-              <div class="item">
-                <img src="vroom/towed.jpg" alt="After the engine blew...">
-              </div>
-              <div class="item">
-                <img src="vroom/subieFront.jpg" alt="Front end friday!">
-              </div>
-          </div>
-          <a class="left carousel-control" href="#myCarousel" data-slide="prev">
-            <span class="glyphicon glyphicon-chevron-left"></span>
-            <span class="sr-only">Previous</span>
-          </a>
-          <a class="right carousel-control" href="#myCarousel" data-slide="next">
-            <span class="glyphicon glyphicon-chevron-right"></span>
-            <span class="sr-only">Next</span>
-          </a>
-        </div>
-        <center><h4> 2008 Subaru WRX Hatchback <h4></center>
-      </div>
-        <div class = "col-md-6">
-          <div id="myCarousel2" class="carousel slide" data-ride="carousel">
-            <ol class="carousel-indicators">
-              <li data-target="#myCarousel2" data-slide-to="0" class="active"></li>
-              <li data-target="#myCarousel2" data-slide-to="1"></li>
-              <li data-target="#myCarousel2" data-slide-to="2"></li>
-              <li data-target="#myCarousel2" data-slide-to="3"></li>
-            </ol>
-            <div class="carousel-inner">
-              <div class="item active">
-                <img src="vroom/suzukiSkyline.jpg" alt="A bike on skyline road">
-              </div>
-              <div class="item">
-                <img src="vroom/suzukiAlices.jpg" alt="Bike at alices">
-              </div>
-              <div class="item">
-                <img src="vroom/suzukiFairings.jpg" alt="The bike with fairings">
-              </div>
-              <div class="item">
-                <img src="vroom/suzukiUmun.jpg" alt="Bike at Mount umunum!">
-              </div>
-          </div>
-          <a class="left carousel-control" href="#myCarousel2" data-slide="prev">
-            <span class="glyphicon glyphicon-chevron-left"></span>
-            <span class="sr-only">Previous</span>
-          </a>
-          <a class="right carousel-control" href="#myCarousel2" data-slide="next">
-            <span class="glyphicon glyphicon-chevron-right"></span>
-            <span class="sr-only">Next</span>
-          </a>
-        </div>
-        </div>
-        <center><h4> 2008 Suzuki SV650S ABS <h4></center>
-      </div>
-
-
-      <div class = row>
-        <div class = col-md-6>
-          <ul class="list-group">
+      <a href="vroom/subieOnIce.jpg">
+                  <img src="vroom/subieOnIce.jpg" alt="subaru on ice" style ="width:100%; height:100%;" >
+                  <center><div class="caption">
+                    <p>2008 Subaru WRX 2019-Present</p>
+                  </div></center>
+                </a>
+    </div>
+    <div class="col-md-6">
+      <br>
+     My first manual car and daily. Has survived roadtrips to Tahoe and LA. During my ownership, I have
+     installed a short shifter, shifter bushings, catback exhaust, roof bars, mudflaps.
+     <ul class="list-group">
             <center><li class="list-group-item active">Work I've Done</li></center>
             <li class="list-group-item">Routine oil and filter changes</li>
             <li class="list-group-item">Installed catback exhaust</li>
@@ -144,10 +89,75 @@
             <li class="list-group-item">Replaced fender liner</li>
             <li class="list-group-item">Installed 4 channel amp, speakers, and subwoofer while maintaining factory head unit and controls</li>
             <li class="list-group-item">Installed sound dampening material in each door card, the trunk lid, and the spare tire compartment</li>
-          </ul>
+          </ul>  
+      </div>
+  </div>
+
+  <div class="row"> 
+    <br><br>
+    <div class="col-md-6">
+      <br>
+      <a href="vroom/fz09.jpg">
+                  <img src="vroom/fz09.jpg" alt="yamaha power" style ="width:100%; height:100%;" >
+                  <center><div class="caption">
+                    <p>2014 Yamaha FZ09 2022-Present</p>
+                  </div></center>
+                </a>
+    </div>
+    <div class="col-md-6">
+      My fourth bike. Most fun bike ive owned to date. Stupid amounts of torque, lightweight, comfortable. Only downside is poor suspension and fuel range.
+      <ul class="list-group">
+        <center><li class="list-group-item active">Work I've Done</li></center>
+        <li class="list-group-item">Cut, threaded and drilled new handlebars</li>
+        <li class="list-group-item">Installed Daytona Grab Bar</li>
+        <li class="list-group-item">Relocated rear plate</li>
+        <li class="list-group-item">Puig windscreen</li>
+        <li class="list-group-item">Corbin Gunfighter</li>
+        <li class="list-group-item">Delkevic full exhaust with 8" muffler</li>
+        <li class="list-group-item">LED turn signals and running lights</li>
+        <li class="list-group-item">Tank Grips</li>
+        </ul>  
         </div>
-        <div class = col-md-6>
-          <ul class="list-group">
+      </div>
+    </div>
+
+    <div class="row"> 
+    <br><br>
+    <div class="col-md-6">
+      <br>
+      <a href="vroom/cbr2.jpg">
+                  <img src="vroom/cbr2.jpg" alt="Honda power" style ="width:100%; height:100%;" >
+                  <center><div class="caption">
+                    <p>2012 Honda CBR600rr 2022-2022</p>
+                  </div></center>
+                </a>
+    </div>
+    <div class="col-md-6">
+      <br><br>
+      Got this bike in a trade and it was a love hate relationship. Handling and power amazing,
+      but its too much for me. Insurance is crazy as well. This bike was crashed and repaired 
+      by the previous owner, and to be honest I couldnt trust it. Didn't do too much work on it, besides
+      changing the stupid loud exhaust. 600's are super fun, but I don't know if I would own one again. Hurts my back and ass too much.
+        </div>
+      </div>
+    </div>
+
+    <div class="row"> 
+    <br><br>
+    <div class="col-md-6">
+      <br>
+      <a href="vroom/suzukiSkyline.jpg">
+                  <img src="vroom/suzukiSkyline.jpg" alt="yamaha power" style ="width:100%; height:100%;" >
+                  <center><div class="caption">
+                    <p>2008 Suzuki SV650S ABS 2020-2022</p>
+                  </div></center>
+                </a>
+    </div>
+    <div class="col-md-6">
+      My second bike. Learned a lot on this bike, through maintence and riding. I really miss it. Fond memories, and 
+      it was so easy to beat on because I knew it was bulletproof and didn't care about the appearance too much. A great balance
+      of power too, could haul ass around town and still have great milage. 
+      <ul class="list-group">
             <center><li class="list-group-item active">Work I've Done</li></center>
             <li class="list-group-item">Routine oil and filter changes</li>
             <li class="list-group-item">Routine chain cleaning, oiling, slack adjustment</li>
@@ -160,8 +170,35 @@
             <li class="list-group-item">Installed aftermarket lower fairings</li>
             <li class="list-group-item">Maintence Log <a href = "https://docs.google.com/spreadsheets/d/19yE8chHRgQMFbwA4DkdNOh68Q8gG5L6RmJOfdOQ0qcA/edit?usp=sharing"> here </a></li>
           </ul>
-            <h2>Future Plans</h2>
-            <h4>I plan to keep the WRX as is. It's a good daily driver, and I feel like adding more power will just lead to more money. This model
+        </div>
+      </div>
+    </div>
+
+    <div class="row"> 
+    <br><br>
+    <div class="col-md-6">
+      <br>
+      <a href="vroom/VstarPark.jpg">
+                  <img src="vroom/VstarPark.jpg" alt="yamaha power" style ="width:100%; height:100%;" >
+                  <center><div class="caption">
+                    <p>2005 Yamaha Vstar650 2020-2020</p>
+                  </div></center>
+                </a>
+    </div>
+    <div class="col-md-6">
+      <br><br><br>
+      The bike that started it all. I recieved it from my friends father. Stupid comfortable, and kind of too loud.
+      I would keep it if I could for sentimental reasons, but I don't have the space to maintain two bikes.
+      Great intro bike to riding, and I quickly learned I enjoy sportier bikes more. I miss this bike. 
+        </div>
+      </div>
+    </div>
+
+</center>
+
+
+            <h2 class = "tab">Future Plans</h2>
+            <h4 class="tab">I plan to keep the WRX as is. It's a good daily driver, and I feel like adding more power will just lead to more money. This model
             is known for its glass transmission, and Subaru doesn't have the best track record with ringlands or headgaskets either. Maybe an intake for
             cool turbo noises, but that's as far as i'll go. <br> <br>
             The SV is a great bike, and really my only complaint is the suspension. Due to having the ABS model, im a bit
