--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
         <div class = "col-sm-4">
           <a href="RTOSmp3.html">
             <span style="color: black;">
-                <i class="fas fa-mp3-player fa-8x"></i>
+              <i class="fas fa-music fa-8x"></i>
             </span>
         </div>
         <div class = "col-sm-4">
