updated for where im at in life

--- a/vroom.html
+++ b/vroom.html
@@ -58,25 +58,26 @@
 
 <center>
   <h2><b> Cars and Bikes </b></h2>
-  <h4> I've been interested in cars for a while, and the last couple of years I have been getting my hands dirty.</h4>
+  <h4> I love fixing things and have a craigslist addiction. </h4>
 </center>
 <center>
 <h2>Current Stable</h2>
-  
+
   <div class="row"> 
     <div class="col-md-6">
       <br>
       <a href="vroom/subieOnIce.jpg">
-                  <img src="vroom/subieOnIce.jpg" alt="subaru on ice" style ="width:100%; height:100%;" >
+                  <img src="vroom/subieOnIce.jpg" alt="subaru on ice" style ="width:90%; height:90%;" >
                   <center><div class="caption">
-                    <p>2008 Subaru WRX 2019-Present</p>
+                    <p>2008 Subaru WRX 2019 - Present</p>
                   </div></center>
                 </a>
     </div>
     <div class="col-md-6">
       <br>
-     My first manual car and daily. Has survived roadtrips to Tahoe and LA. During my ownership, I have
-     installed a short shifter, shifter bushings, catback exhaust, roof bars, mudflaps.
+     My first manual car. Has survived roadtrips to Tahoe and LA. During my ownership, I have
+     installed a short shifter, shifter bushings, catback exhaust, roof bars, mudflaps. It's a great car,
+     and does everything I want it to. Whenever it dies, depending on where I am in life, i'll get a Miata or Tacoma.
      <ul class="list-group">
             <center><li class="list-group-item active">Work I've Done</li></center>
             <li class="list-group-item">Routine oil and filter changes</li>
@@ -94,117 +95,157 @@
   </div>
 
   <div class="row"> 
-    <br><br>
+    <div class="col-md-6">
+      <br>
+      <a href="vroom/mt07.jpg">
+                  <img src="vroom/mt07.jpg" alt="subaru on ice" style ="width:90%; height:70%;" >
+                  <center><div class="caption">
+                    <p>2019 Yamaha MT07 2023 - Present</p>
+                  </div></center>
+                </a>
+    </div>
+    <div class="col-md-6">
+      <br>
+     Bike #6. Its not the fastest, but I find it fun, practicle and reliable. At times I wish for more speed or more comfort, but I find this bike
+     to be a perfect middle ground. If I don't keep it forever, ill trade it in for a Tenere 700. CP2 is an amazing motor. 
+     <ul class="list-group">
+            <center><li class="list-group-item active">Mods</li></center>
+            <li class="list-group-item">Dynojet Powervision 3 flash</li>
+            <li class="list-group-item">Yoshimura full exhaust</li>
+            <li class="list-group-item">LED headlight</li>
+            <li class="list-group-item">CRG bar end mirrros with Rhino Moto Bar ends</li>
+            <li class="list-group-item">3D printed gauge relocation</li>
+            <li class="list-group-item">Ermax Sport screen</li>
+            <li class="list-group-item">TST Taillight and plate relocation</li>
+            <li class="list-group-item">Womet Tech levers and crash sliders, front and rear</li>
+            <li class="list-group-item">TST turn signals with running lights</li>
+          </ul>  
+      </div>
+  </div>
+
+  <div class="row"> 
+    <div class="col-md-6">
+      <br>
+      <a href="vroom/drz.JPG">
+                  <img src="vroom/drz.JPG" alt="subaru on ice" style ="width:90%; height:90%;" >
+                  <center><div class="caption">
+                    <p>2008 Suzuki DRZ400sm 2023 - 2023</p>
+                  </div></center>
+                </a>
+    </div>
+    <div class="col-md-6">
+      <br>
+     A short lived project. Impulsively bought it when I saw it on marketplace. Made a small profit when selling it. Was honestly a really fun bike,
+     but the high miles (28000) kind of scared me. I would like to own another someday for light offroading. First carbed bike and it was nice project. 
+     <ul class="list-group">
+            <center><li class="list-group-item active">Work I've Done</li></center>
+            <li class="list-group-item">Rebuilt the Keihin FCR39, new gaskets, needles</li>
+            <li class="list-group-item">New air and oil filter</li>
+            <li class="list-group-item">Removed surface rust from frame with wire brushed, enamel painted</li>
+            <li class="list-group-item">New speedometer cable</li>
+            <li class="list-group-item">New turn signals wired in to harness</li>
+            <li class="list-group-item">Flush and bleed radiator</li>
+            <li class="list-group-item">Lots of carb tuning..</li>
+            <li class="list-group-item">Traded desert tank for an OEM metal DRZ tank</li>
+            <li class="list-group-item">Valve shim and timing adjustment</li>
+          </ul>  
+      </div>
+  </div>
+
+  <div class="row"> 
     <div class="col-md-6">
       <br>
       <a href="vroom/fz09.jpg">
-                  <img src="vroom/fz09.jpg" alt="yamaha power" style ="width:100%; height:100%;" >
+                  <img src="vroom/fz09.jpg" alt="subaru on ice" style ="width:90%; height:90%;" >
                   <center><div class="caption">
-                    <p>2014 Yamaha FZ09 2022-Present</p>
+                    <p>2014 Yamaha FZ09 2022 - 2022</p>
                   </div></center>
                 </a>
     </div>
-    <div class="col-md-6">
-      My fourth bike. Most fun bike ive owned to date. Stupid amounts of torque, lightweight, comfortable. Only downside is poor suspension and fuel range.
-      <ul class="list-group">
-        <center><li class="list-group-item active">Work I've Done</li></center>
-        <li class="list-group-item">Cut, threaded and drilled new handlebars</li>
-        <li class="list-group-item">Installed Daytona Grab Bar</li>
-        <li class="list-group-item">Relocated rear plate</li>
-        <li class="list-group-item">Puig windscreen</li>
-        <li class="list-group-item">Corbin Gunfighter</li>
-        <li class="list-group-item">Delkevic full exhaust with 8" muffler</li>
-        <li class="list-group-item">LED turn signals and running lights</li>
-        <li class="list-group-item">Tank Grips</li>
-        </ul>  
-        </div>
-      </div>
-    </div>
-
-    <div class="row"> 
-    <br><br>
     <div class="col-md-6">
       <br>
-      <a href="vroom/cbr2.jpg">
-                  <img src="vroom/cbr2.jpg" alt="Honda power" style ="width:100%; height:100%;" >
-                  <center><div class="caption">
-                    <p>2012 Honda CBR600rr 2022-2022</p>
-                  </div></center>
-                </a>
-    </div>
-    <div class="col-md-6">
-      <br><br>
-      Got this bike in a trade and it was a love hate relationship. Handling and power amazing,
-      but its too much for me. Insurance is crazy as well. This bike was crashed and repaired 
-      by the previous owner, and to be honest I couldnt trust it. Didn't do too much work on it, besides
-      changing the stupid loud exhaust. 600's are super fun, but I don't know if I would own one again. Hurts my back and ass too much.
-        </div>
-      </div>
-    </div>
-
-    <div class="row"> 
-    <br><br>
-    <div class="col-md-6">
-      <br>
-      <a href="vroom/suzukiSkyline.jpg">
-                  <img src="vroom/suzukiSkyline.jpg" alt="yamaha power" style ="width:100%; height:100%;" >
-                  <center><div class="caption">
-                    <p>2008 Suzuki SV650S ABS 2020-2022</p>
-                  </div></center>
-                </a>
-    </div>
-    <div class="col-md-6">
-      My second bike. Learned a lot on this bike, through maintence and riding. I really miss it. Fond memories, and 
-      it was so easy to beat on because I knew it was bulletproof and didn't care about the appearance too much. A great balance
-      of power too, could haul ass around town and still have great milage. 
-      <ul class="list-group">
+     My first time on a track was on this bike. Wrecked it. I regret it but I learned a lot about bike handling and what not to do. 
+     Locked my front brake over a crest and the rest was history. Bike flipped and got destroyed, broken rim, fork, gas tank, sub frame. Engine still ran 
+     and I sold the bike at a loss. One day I will track again.
+     <ul class="list-group">
             <center><li class="list-group-item active">Work I've Done</li></center>
-            <li class="list-group-item">Routine oil and filter changes</li>
-            <li class="list-group-item">Routine chain cleaning, oiling, slack adjustment</li>
-            <li class="list-group-item">Installed fender eliminator</li>
-            <li class="list-group-item">Brake bleed</li>
-            <li class="list-group-item">Radiator Flush</li>
-            <li class="list-group-item">Valve clearance, spark plugs, valve cover gasket inspected and replaced</li>
-            <li class="list-group-item">Wrapped and installed new exhaust</li>
-            <li class="list-group-item">Installed new turn signals in the front and rear</li>
-            <li class="list-group-item">Installed aftermarket lower fairings</li>
-            <li class="list-group-item">Maintence Log <a href = "https://docs.google.com/spreadsheets/d/19yE8chHRgQMFbwA4DkdNOh68Q8gG5L6RmJOfdOQ0qcA/edit?usp=sharing"> here </a></li>
-          </ul>
-        </div>
+            <li class="list-group-item">Drilled and tapped new protaper bars</li>
+            <li class="list-group-item">Corbin Seat</li>
+            <li class="list-group-item">Delkevic exhaust</li>
+            <li class="list-group-item">Vcyclenut ECU flash</li>
+            <li class="list-group-item">New turn signals with daytime lights</li>
+            <li class="list-group-item">TST plate tuck</li>
+            <li class="list-group-item">2005 ZX6RR rear shock swap</li>
+          </ul>  
       </div>
-    </div>
+  </div>
 
-    <div class="row"> 
-    <br><br>
+  <div class="row"> 
     <div class="col-md-6">
+      <br>
+      <a href="vroom/cbr1.jpg">
+                  <img src="vroom/cbr1.jpg" alt="honda power" style ="width:90%; height:90%;" >
+                  <center><div class="caption">
+                    <p>2012 Honda CBR600rr 2022 - 2022</p>
+                  </div></center>
+                </a>
+    </div>
+    <div class="col-md-6">
+      <br>
+     This bike was a hot mess but I guess it was fun. Nearly killed me but thats what makes it exciting. Didn't live long because
+     insurance is way too much, and the questionable history made me a little worried.
+     <ul class="list-group">
+            <center><li class="list-group-item active">Work I've Done</li></center>
+            <li class="list-group-item">Two brothers exhaust</li>
+            <li class="list-group-item">Replaced front brake calipers</li>
+            <li class="list-group-item">TST plate tuck</li>
+            <li class="list-group-item">Zero Gravity touring screen</li>
+          </ul>  
+      </div>
+  </div>
+
+  <div class="row"> 
+    <div class="col-md-6">
+      <br>
+      <a href="vroom/suzukiAlices.jpg">
+                  <img src="vroom/suzukiAlices.jpg" alt="I love alices" style ="width:90%; height:90%;" >
+                  <center><div class="caption">
+                    <p>2008 Suzuki SV650SFA 2020 - 2022</p>
+                  </div></center>
+                </a>
+    </div>
+    <div class="col-md-6">
+      <br>
+     Huge soft spot with this bike. Fond memories of just riding to SF or SC or Skyline after school for fun. Looks great, reasonable power and very comfortable.
+
+     <ul class="list-group">
+            <center><li class="list-group-item active">Work I've Done</li></center>
+            <li class="list-group-item">Delkevic exhaust</li>
+            <li class="list-group-item">GIVI rear rack and 46L case</li>
+            <li class="list-group-item">OEM lower faring</li>
+            <li class="list-group-item">Galfer steel braided brake line</li>
+            <li class="list-group-item">Auxillary turn and brake lights</li>
+            <li class="list-group-item">Heated grips and Superbike bar conversion</li>
+            <li class="list-group-item">Vortex chain and sprockets</li>
+          </ul>  
+      </div>
+  </div>
+
+  <div class="row"> 
+    <div class="col-md-12">
       <br>
       <a href="vroom/VstarPark.jpg">
-                  <img src="vroom/VstarPark.jpg" alt="yamaha power" style ="width:100%; height:100%;" >
+                  <img src="vroom/VstarPark.jpg" alt="Vstar650" style ="width:40%; height:40%;" >
                   <center><div class="caption">
-                    <p>2005 Yamaha Vstar650 2020-2020</p>
+                    <p>2004 Yamaha Vstar650 2020 - 2020</p>
                   </div></center>
                 </a>
+                
+                The bike that got me into riding. Wish I had the space to keep this one.   
     </div>
-    <div class="col-md-6">
-      <br><br><br>
-      The bike that started it all. I recieved it from my friends father. Stupid comfortable, and kind of too loud.
-      I would keep it if I could for sentimental reasons, but I don't have the space to maintain two bikes.
-      Great intro bike to riding, and I quickly learned I enjoy sportier bikes more. I miss this bike. 
-        </div>
-      </div>
-    </div>
+  </div>
 
 </center>
-
-
-            <h2 class = "tab">Future Plans</h2>
-            <h4 class="tab">I plan to keep the WRX as is. It's a good daily driver, and I feel like adding more power will just lead to more money. This model
-            is known for its glass transmission, and Subaru doesn't have the best track record with ringlands or headgaskets either. Maybe an intake for
-            cool turbo noises, but that's as far as i'll go. <br> <br>
-            The SV is a great bike, and really my only complaint is the suspension. Due to having the ABS model, im a bit
-            limited on rear shock upgrades, and replacing the front with a GSXR fork would probably leave me with no ABS. May install some valve
-            emulators in the future.</h4>
-            <br>
         </div>
       </div>
     </div>
