Update index.html with job

--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
   <div class = "col-sm-5">
     <br><br>
     <h2> <b>About me</b> </h2>
-    <h4> Hi, im Kevin, a Computer Engineering graduate from San Jose State University. I currently work at Canon USA as a Technical Support Engineer
-      with the Industruial Productions Division. I'm a fan of motorsports, the outdoors, coffee, and sparkling water. </h4>
+    <h4> Hi, im Kevin, a Computer Engineering graduate from San Jose State University. I currently work at BART as a Junior Engineer
+      with the Integration Department. I'm a fan of motorsports, the outdoors, coffee, and sparkling water. </h4>
       <br><br>
       <h2> <b> Projects </b> </h2>
       <div class = "row">
